<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#3BB9FF"
        android:text="@string/purchase_or_services_history"
        android:textColor="#111111"
        android:textSize="28sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AAAAAA"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="@string/no"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="@string/date"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="@string/type_service"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="@string/price"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="73dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="@string/view"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AAAAAA"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="@string/no_1"
                android:textSize="12sp"
                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="@string/date_pur"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="153dp"
                android:layout_height="35dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="@string/detail"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="@string/rm"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="32dip"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/view"
                android:scaleType="fitCenter"
                android:background="#ffffff"
                android:layout_marginTop="1dp"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AAAAAA"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="@string/_2"
                android:textSize="12sp"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="@string/_20jun2020"
                android:textSize="12sp"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="@string/service"
                android:textSize="12sp"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="@string/rm"
                android:textSize="12sp"
                tools:ignore="DuplicateIds" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="32dip"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/view"
                android:background="#ffffff"
                android:layout_marginTop="1dp"/>




        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#aaaaaa">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="@string/_2"
                android:textSize="12sp"
                tools:ignore="DuplicateIds"  />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="25Jun2020"
                android:textSize="12sp"
                tools:ignore="DuplicateIds" />

            <TextView
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="Product and Service"
                android:textSize="12sp"
                tools:ignore="DuplicateIds"  />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:text="100.00"
                android:textSize="12sp"
                tools:ignore="DuplicateIds" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="32dip"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/view"
                android:background="#ffffff"
                android:layout_marginTop="1dp"/>

        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>